_sass/site.scss
/* ==========================================================================
   Site wide styles
   ========================================================================== */

/*
   Selection
   ========================================================================== */

::-moz-selection {
	background-color: lighten($basecolor, 65%);
	color: $basecolor;
	text-shadow: none;
}
::selection {
	background-color: lighten($basecolor, 65%);
	color: $basecolor;
	text-shadow: none;
}

/*
   Global classes
   ========================================================================== */

/* Capitalize */
.all-caps {
	text-transform: uppercase;
}

/* Float left */
.pull-left {
	float: left;
}

/* Float right */
.pull-right {
	float: right;
}
.image-pull-right {
	float: right;
	margin-top: 0;
}

/* Clearfix */
.clearfix {
	*zoom: 1;
	&:before,
	&:after {
		display: table;
	    content: "";
	}
	&:after {
		clear: both;
	}
}

/* Remove bullets and indentation from list */
.unstyled-list {
	list-style: none;
	margin-left: 0;
	padding-left: 0;
	li {
		list-style-type: none;
	}
}

/*
   Global transition
   ========================================================================== */

b, i, strong, em, blockquote, p, q, span, figure, img, h1, h2, header, input, a {
	@include transition(all .2s ease);
}

/* local customizations */

.callout {
    float: right;
    clear: right;
}
.callout-left {
    float: left;
    clear: left;
}
.dateline {
    display:block;
    margin-top: 0;
    font-size: 75%;
    font-style: italic;
}
.halfwidth {
    width: 50%;
}

.threeqtrwidth {
    width: 75%;
}

.two-up {
  float: left;
  width: 45%;
  padding: 10px;
}

figure {
  margin-bottom: 0px !important;
}

.noclear {
    clear: none;
}
hr {
    clear: both;
}

ul.references {
    list-style-type: none;
    list-style-position: outside;
    padding: 0;
    text-indent: -20px;
    margin-left: 20px;
}

.info {
    font-size: 80%;
}
.dbpedia-thumb {
    float: left;
    clear: none;
    padding: 3px;
    margin: 3px;
}
.dbpedia-thumb img {
    height: 80px;
}

img.post-thumb {
    height: 70px;
    float: right;
    clear: right;
    margin-bottom: 3px;
}

.social-share * {
  display: inline-block;
}

.small {
  font-size: 85%;
}

.image-credit a, figcaption a, .caption a {
    text-decoration: underline;
}

.no-wrap {
  white-space: nowrap;
}

.tags {
  font-size: 85%;
  color: gray;
  text-align: right;
  clear: right;
  margin-top: -15px;
}
.tags span {
  padding-left: 5px;
}
.tags span:before {
  content: "#";
}

/* update entries */

.h-entry {
  margin-bottom: 3em;
}

.in-reply-to {
  background-color: #efefef;
  border: 1px solid grey;
  padding: 5px;
  border-radius: 5px;
  margin: 5px 5px 15px;
}

/* mentions */

.webmentions .repost:before {
    content: "\f079";  /* retweet */
    font-family: FontAwesome;
    font-style: normal;
    font-weight: normal;
    text-decoration: inherit;
    padding-right: 5px;
}

.webmentions .like:before {
    content: "\f005";  /* star */
    font-family: FontAwesome;
    font-style: normal;
    font-weight: normal;
    text-decoration: inherit;
    padding-right: 5px;
}

.webmentions .reply:before {
    content: "\f112";  /* reply */
    font-family: FontAwesome;
    font-style: normal;
    font-weight: normal;
    text-decoration: inherit;
    padding-right: 5px;
}

.webmentions .link:before {
    content: "\f0c1";  /* link */
    font-family: FontAwesome;
    font-style: normal;
    font-weight: normal;
    text-decoration: inherit;
    padding-right: 5px;
}

.mention-details {
  margin-top: 10px;
  text-indent: -22px;
  margin-left: 22px;
}

.webmentions a, .description a {
  text-decoration: underline;
}

.e-content a, .e-content a:visited {
  color: rgb(43, 123, 185);
}

.tag-index h2.tag {
  display: inline-block;
}

.count {
  padding-left: 5px;
  font-weight: normal;
  color: gray;
}
.description {
  margin-bottom: 5px;
  font-size: 90%;
}

.collapsible-content .content {
    display: none;
}

.collapsible-content input.checkbox-toggle {
  display: none;
}

input.checkbox-toggle ~ label h2 {
  margin-bottom: 10px;
}

input.checkbox-toggle ~ label {
  /*padding: .7em;*/
  cursor: pointer;
  width: 100%;
  border-bottom: 1px solid #ababab;
}

input.checkbox-toggle + label::after {
  font-family: FontAwesome;
  content: "\f078";
  /* chevron down */
  margin-right: 25px;
  margin-top: 25px;
  float: right;
  color: #ababab;

}

input.checkbox-toggle:checked + label::after {
  content: "\f077";
  /* chevron up */
}

.collapsible-content input.checkbox-toggle ~ label {
  display: block;
}

.collapsible-content input.checkbox-toggle ~ .content {
  display: none;
}

.collapsible-content input.checkbox-toggle:checked ~ .content {
  display: block;
}

.headerlink {
    opacity: 0;
    padding-left: 10px;
    font-size: 0.8em;
    position: relative;
    top: -0.17em;
    font-weight: 700;
    text-decoration: none;
    -webkit-transition: opacity 200ms ease-in-out;
    transition: opacity 200ms ease-in-out;
}
label:hover>.headerlink {
    opacity: 1;
}

.hidden {
  display: none;
}

.h-entry img.u-photo {
  max-width: 100%;
  margin-top: -15px;
  padding-bottom: 15px;
}

.h-entry p {
  margin-bottom: 0;
}

a.fn, a.fn:visited, span.fn {
  text-decoration: none !important;
  color: #1cade4;
}

